# lhcb-local-trigger-bdt

./: BBDecTreeTool.cpp  BBDecTreeTool.h  CMakeLists.txt  OfflineBBDTFilter.py  README.md
D0Tophigamma_studies/: README.md  Trigger Rates.ipynb  TriggerRateTest.sh
include/: BBDecTreeTool.h
options/: options.py
src/: BBDecTreeTool.cpp  main.cpp
